#!/usr/bin/env python3
#
"""
Print a random quote from the Dune novels by Frank Herbert.
https://github.com/ywalia01/dune-api
"""

import json
import urllib.request

__QUOTES_API__ = "https://the-dune-api.herokuapp.com/quotes"


def main():
    with urllib.request.urlopen(__QUOTES_API__) as r:
        r_json = json.loads(r.read().decode())

    for quote_json in r_json:
        print(quote_json.get("quote"))


if __name__ == "__main__":
    main()

# EOF
